feat: change press start 2p to zpix

--- a/src/assets/css/font.css
+++ b/src/assets/css/font.css
@@ -1,4 +1,4 @@
 @font-face {
-  font-family: "Press Start 2P";
-  src: url("/public/font/PressStart2P-Regular.ttf") format("truetype");
+  font-family: "zpix";
+  src: url("/public/font/zpix.ttf") format("truetype");
 }
