feat: use vue router and add nav bar

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -4,6 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-#app {
-  font-family: 'zpix';
+body {
+  @apply text-ctp-text font-[zpix] bg-ctp-base
 }
